Fixed minor issues in overlay CSS on mobile sizes.

--- a/css/_overlay.scss
+++ b/css/_overlay.scss
@@ -31,6 +31,8 @@
   float: right;
   padding: 8px 8px 8px 8px;
   margin-right: 3%;
+  margin-bottom: 15px;
+  margin-top: 10px;
   background-color: rgba(110, 51, 9, .8);
   border: 2px solid rgb(49, 150, 102);
   box-shadow: 2px 2px 8px black;
@@ -91,12 +93,12 @@
 
 @media screen and (max-width: 700px) {
 
-  /*.map-box {
+  .map-box {
     width: 100%;
     height: 100%;
     margin: 0;
     border-radius: 0;
-  }*/
+  }
 
 }
 
